--- a/medtype/medtype/src/main/resources/application.properties
+++ b/medtype/medtype/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.password=98655754
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+security.jwt.secret=Jk2g6k0iN5I4C0yqQpZc7b3xJvW1+vQXj1yGm9o2s5A=
+security.jwt.expiration-ms=3600000
 
